// Vitest Snapshot v1

exports[`useState > should decrements count value on click 1`] = `
"<div>
  <p>Count: -1</p><button class=\\"increment\\">Increment</button><button class=\\"decrement\\">Decrement</button>
</div>"
`;

exports[`useState > should get count value when trigger method 1`] = `
"<div>
  <p>Count: [
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
    10
    ]</p><button class=\\"increment\\">Increment</button><button class=\\"decrement\\">Decrement</button>
</div>"
`;

exports[`useState > should increments count value on click 1`] = `
"<div>
  <p>Count: 1</p><button class=\\"increment\\">Increment</button><button class=\\"decrement\\">Decrement</button>
</div>"
`;
